--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="vendors/jquery-3.4.1.min.js"></script>
     <script src="scripts/client.js"></script>
-    <title>Chien JQ1</title>
+    <title>Chien Songs</title>
 </head>
 <body>
-    <h1>Chien JQ1</h1>
+    <h1>Chien Songs</h1>
+    <button id="updateSongsButton">Update Songs</button>
 </body>
 </html>
