--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 <body>
     <h1>Chien Songs</h1>
     <button id="updateSongsButton">Update Songs</button>
+    <ul id="songsOut">
+        
+    </ul>
 </body>
 </html>
