--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
     <h1>Chien Songs</h1>
-    <button id="updateSongsButton">Update Songs</button>
+    <input id="titleIn" placeholder="song title" type="text">
+    <input id="albumIn" placeholder="album title" type="text">
+    <input id="artistIn" placeholder="artist" type="text">
+    <input id="yearIn" placeholder="year" type="number">
+    <button id="addSongButton">Add Song</button>
     <ul id="songsOut">
-        
+
     </ul>
 </body>
 </html>
